Update SEO and branding: Replace AI solutions content with conference website solutions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Vizax — AI-Powered Solutions",
+  "name": "Vizax — Conference Website Solutions",
   "short_name": "Vizax",
-  "description": "AI-Powered Solutions & Intelligent Automation",
+  "description": "Professional Conference Website Solutions & Management Platforms",
   "icons": [
     {
       "src": "/favicon.webp",
